fixed flash bar on mobile

--- a/app/assets/stylesheets/nm.css.scss
+++ b/app/assets/stylesheets/nm.css.scss
@@ -5,15 +5,3 @@ html, body{
   width: 100%;
 }
 
-.flash{
-  color: white;
-  background: $orange-color;
-  height: 50px;
-  width: 100%;
-  text-transform: uppercase;
-  letter-spacing: .2em;
-  font-size: 1.2em;
-  line-height: 3em;
-  text-align: center;
-  padding-right: 10px;
-}
